native/accelerate-ffi/src/accelerate.rs

unsafe extern "C" {
    pub fn cblas_strmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_stbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_stpmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const f32,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_strsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_stbsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_stpsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const f32,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dgemv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __beta: f64,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dgbmv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __KL: ::std::os::raw::c_int,
        __KU: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __beta: f64,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtrmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtpmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const f64,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtrsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtbsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtpsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const f64,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cgemv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cgbmv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __KL: ::std::os::raw::c_int,
        __KU: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctrmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctpmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctrsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctbsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctpsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zgemv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zgbmv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __KL: ::std::os::raw::c_int,
        __KU: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ztrmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ztbmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ztpmv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ztrsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ztbsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ztpsv(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __N: ::std::os::raw::c_int,
        __Ap: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
